<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>fr.iban</groupId>
    <artifactId>Core</artifactId>
    <version>1.0</version>
    <packaging>pom</packaging>

    <properties>
        <java.version>17</java.version>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    </properties>

    <build>
        <defaultGoal>clean package</defaultGoal>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-compiler-plugin</artifactId>
                    <version>3.8.1</version>
                    <configuration>
                        <source>${java.version}</source>
                        <target>${java.version}</target>
                    </configuration>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-shade-plugin</artifactId>
                    <version>3.3.0</version>
                    <executions>
                        <execution>
                            <phase>package</phase>
                            <goals>
                                <goal>shade</goal>
                            </goals>
                            <configuration>
                                <createDependencyReducedPom>false</createDependencyReducedPom>
                                <relocations>
                                    <relocation>
                                        <pattern>com.zaxxer</pattern>
                                        <shadedPattern>fr.iban.libs.com.zaxxer</shadedPattern>
                                    </relocation>
                                    <relocation>
                                        <pattern>com.github.ben-manes.caffeine</pattern>
                                        <shadedPattern>fr.iban.libs.com.github.ben-manes.caffeine</shadedPattern>
                                    </relocation>
                                    <relocation>
                                        <pattern>com.github.benmanes.caffeine</pattern>
                                        <shadedPattern>fr.iban.libs.com.github.benmanes.caffeine</shadedPattern>
                                    </relocation>
                                    <relocation>
                                        <pattern>redis.clients</pattern>
                                        <shadedPattern>fr.iban.libs.redis.clients</shadedPattern>
                                    </relocation>
                                </relocations>
                                <filters>
                                    <filter>
                                        <artifact>*:*</artifact>
                                        <excludes>
                                            <exclude>module-info.class</exclude>
                                            <exclude>META-INF/*.SF</exclude>
                                            <exclude>META-INF/*.DSA</exclude>
                                            <exclude>META-INF/*.RSA</exclude>
                                        </excludes>
                                    </filter>
                                </filters>
                            </configuration>
                        </execution>
                    </executions>
                </plugin>
            </plugins>
        </pluginManagement>
    </build>

    <modules>
        <module>Core-common</module>
        <module>Core-paper</module>
        <module>Core-waterfall</module>
        <module>Core-velocity</module>
        <module>Core-survival</module>
    </modules>
</project>
